适应新版本的 Blockus

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,16 +11,17 @@ fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
 mod_version=2.0.0
+mod_version_blockus = 2.0.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.78.0+1.19.4
+fabric_api_version=0.82.0+1.19.4
 modmenu_version=6.2.1
 brrp_version=1.0.0
-blockus_version=4483337
-terraform_version=6.0.0-beta.1
+blockus_version=4529162
+terraform_version=6.1.0
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
