--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 archivesBaseName = project.archives_base_name + "-fabric"
-version = project.mod_version + '-mc' + project.minecraft_version
+version = project.mod_version + '-mc' + '1.20' // project.minecraft_version
 group = project.maven_group
 
 allprojects {
