--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,23 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20-pre4
-supported_minecraft_versions=1.20-pre4
-loader_version=0.14.19
-yarn_mappings=1.20-pre4+build.3
+minecraft_version=1.20-rc1
+supported_minecraft_versions=1.20-rc1
+loader_version=0.14.21
+yarn_mappings=1.20-rc1+build.2
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.0-beta.2
+mod_version=2.0.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.81.2+1.20
+fabric_api_version=0.83.0+1.20
 modmenu_version=
-brrp_version=1.0.0-beta.2
+brrp_version=1.0.0
+brrp_mc_version=1.20
 blockus_version=
 terraform_version=
 
