--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 archivesBaseName = project.archives_base_name + "-fabric"
-version = project.mod_version + '-mc' + '1.20' // project.minecraft_version
+version = project.mod_version + '-mc' + project.minecraft_version
 group = project.maven_group
 
 allprojects {
@@ -47,7 +47,7 @@ allprojects {
         // Fabric API
         modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
         // ModMenu 模组
-//        modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}")
+        modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}")
 
         // 下面两个模组均存储于本地的 maven 仓库。
 
