--- a/gradle.properties
+++ b/gradle.properties
@@ -3,25 +3,24 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20-rc1
-supported_minecraft_versions=1.20-rc1
+minecraft_version=1.20.1
+supported_minecraft_versions=1.20,1.20.1
 loader_version=0.14.21
-yarn_mappings=1.20-rc1+build.2
+yarn_mappings=1.20.1+build.1
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.83.0+1.20
-modmenu_version=
+fabric_api_version=0.83.0+1.20.1
+modmenu_version=7.0.1
 brrp_version=1.0.0
-brrp_mc_version=1.20
-blockus_version=
-terraform_version=
+blockus_version=4573570
+terraform_version=7.0.0-beta.1
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
