--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 import com.modrinth.minotaur.dependencies.ModDependency
 
 plugins {
-    id 'fabric-loom' version '1.1-SNAPSHOT'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
-    id 'io.github.juuxel.loom-quiltflower' version '1.8.0'
+    id 'io.github.juuxel.loom-vineflower' version '1.11.0'
     id "com.modrinth.minotaur" version "2.+"
 }
 
