--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.20.1
 supported_minecraft_versions=1.20,1.20.1
 loader_version=0.14.22
-yarn_mappings=1.20.1+build.1
+yarn_mappings=1.20.1+build.10
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
@@ -16,11 +16,11 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.83.0+1.20.1
-modmenu_version=7.0.1
-brrp_version=1.0.0
-blockus_version=4573570
-terraform_version=7.0.0-beta.1
+fabric_api_version=0.88.1+1.20.1
+modmenu_version=7.1.0
+brrp_version=1.0.1
+blockus_version=4707565
+terraform_version=7.0.1
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
