--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.19.3+build.5
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -24,8 +24,8 @@ terraform_version=5.0.0
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://download.mcbbs.net/maven/
-loom_resources_base=https://download.mcbbs.net/assets/
-loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 loom_fabric_repository=https://repository.hanbings.io/proxy/
