--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,11 @@ plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
     id 'io.github.juuxel.loom-vineflower' version '1.11.0'
+
+    // 用于模组发布
     id "com.modrinth.minotaur" version "2.+"
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id "com.github.breadmoirai.github-release" version "2.4.1"
 }
 
 archivesBaseName = project.archives_base_name + "-fabric"
@@ -104,11 +108,6 @@ allprojects {
             // Notice: This block does NOT have the same function as the block in the top level.
             // The repositories here will be used for publishing your artifact, not for
             // retrieving dependencies.
-            maven {
-                // 将模块导出至本地另一个项目的位置中，该项目与 GitHub 项目关联。
-                // 随后，推送那个项目至 GitHub 上。
-                url = 'file:../mvn-repo'
-            }
         }
     }
 
@@ -128,6 +127,10 @@ allprojects {
     }
 }
 
+ext {
+    release_type = mod_version.contains('beta') ? 'beta' : 'release' as String
+}
+
 subprojects {
     dependencies {
     }
@@ -139,21 +142,97 @@ project(':runtest') {
         implementation project(path: ':with_blockus', configuration: "namedElements")
     }
 
-    remapJar {
-        enabled = false
+    tasks.each {
+        if (it != tasks.runClient && it != tasks.runServer && it != tasks.ideaSyncTask) {
+            it.enabled = false
+        }
     }
 }
 
+
+/**
+ * 从 UpdateLog-en.md 中提取更新日志
+ */
+String getUpdateLog(String modVersion = project.mod_version) {
+    StringBuilder builder = new StringBuilder()
+    boolean start = false
+    file('UpdateLog-en.md').eachLine {
+        if (it.matches("^###\\s*" + modVersion + '$')) {
+            start = true
+        } else if (it.startsWith("###")) {
+            start = false
+        } else if (start) {
+            builder.append it
+            builder.append '\n'
+        }
+        return
+    }
+    return builder.toString().trim()
+}
+
+// 模组发布部分
+
+println "当前版本（${project.mod_version}）更新记录："
+final String changelogContent = getUpdateLog(project.mod_version.replaceAll('-.+?\$', ""))
+println changelogContent
+
+curseforge {
+    def getenv = System.getenv("CURSEFORGE_TOKEN")
+    println("CurseForge 令牌: $getenv")
+    if (getenv) apiKey = getenv
+    project {
+        id = '514125'  // extended block shapes
+        changelog = changelogContent
+        changelogType = 'markdown'
+        releaseType = release_type
+        mainArtifact remapJar
+
+        for (final String v in (project.supported_minecraft_versions.split(','))) {
+            addGameVersion v
+        }
+        addGameVersion 'Fabric'
+
+        relations {
+            requiredDependency 'fabric-api'
+            requiredDependency 'better-runtime-resource-pack'
+        }
+    }
+
+    options {
+        forgeGradleIntegration = false
+    }
+}
 
 modrinth {
     projectId = 'tb7kCxSW'
     String platform = project.properties.getOrDefault 'loom.platform', 'fabric'
     versionNumber = "${rootProject.mod_version}-${platform}-${rootProject.minecraft_version}"
-    versionType = 'release'
+    versionType = release_type
     uploadFile = remapJar
     gameVersions = project.supported_minecraft_versions.isEmpty() ? List.of(rootProject.minecraft_version) : (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
-    var list = [new ModDependency('JnrDtPAE', 'required')]
-    if (platform == 'fabric') list.add new ModDependency('P7dR8mSH', 'required')
-    dependencies = list
+    var dependenciesList = [new ModDependency('JnrDtPAE', 'required')] // brrp
+    if (platform == 'fabric') dependenciesList.add new ModDependency('P7dR8mSH', 'required') // Fabric API
+    dependencies = dependenciesList
+    changelog = changelogContent
+}
+
+githubRelease {
+    def getenv = System.getenv("GITHUB_TOKEN")
+    println "GitHub 令牌: $getenv"
+    if (getenv) token getenv
+    owner "SolidBlock-cn"
+    repo "extshape"
+    tagName "v$project.mod_version"
+    targetCommitish "1.20.1"
+    body changelogContent
+    draft true
+    prerelease false
+    releaseAssets remapJar, remapSourcesJar
+    allowUploadToExisting true
+    apiEndpoint "https://api.github.com"
+}
+
+publish {
+    dependsOn tasks.curseforge, tasks.modrinth, tasks.githubRelease
 }
