--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.20.1+build.10
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.2
+mod_version=2.0.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -19,8 +19,10 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.88.1+1.20.1
 modmenu_version=7.1.0
 brrp_version=1.0.1
-blockus_version=4707565
+blockus_version=4745041
 terraform_version=7.0.1
+imblocker_version=4605195
+rei_version=12.0.652
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
