更新至 2.0.3，并在构建中加入 Roughly Enough Items 和 IMBlocker 等模组

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.19.3+build.5
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.2
+mod_version=2.0.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -21,6 +21,8 @@ modmenu_version=5.0.0
 brrp_version=1.0.1
 blockus_version=4411968
 terraform_version=5.0.0
+imblocker_version=4605195
+rei_version=10.0.646
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
