--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.19.4+build.2
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.2
+mod_version=2.0.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -21,6 +21,8 @@ modmenu_version=6.2.1
 brrp_version=1.0.1
 blockus_version=4671265
 terraform_version=6.1.0
+imblocker_version=4605195
+rei_version=11.0.651
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
