更新至 2.0.3，并在构建中加入 Roughly Enough Items 和 IMBlocker 等模组

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.18.2+build.4
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.2
+mod_version=2.0.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -22,6 +22,8 @@ brrp_version=1.0.1
 blockus_version=3930972
 terraform_version=3.0.0
 reasonable_sorting_version=2.1.0
+imblocker_version=4605195
+rei_version=9.1.650
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
