--- a/gradle.properties
+++ b/gradle.properties
@@ -3,26 +3,26 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.1
-supported_minecraft_versions=1.20,1.20.1
+minecraft_version=1.20.2-pre2
+supported_minecraft_versions=1.20.2-pre2,1.20.2-pre3
 loader_version=0.14.22
-yarn_mappings=1.20.1+build.10
+yarn_mappings=1.20.2-pre2+build.5
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.3
+mod_version=2.0.3-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.88.1+1.20.1
-modmenu_version=7.1.0
-brrp_version=1.0.1
-blockus_version=4745041
-terraform_version=7.0.1
+fabric_api_version=0.88.3+1.20.2
+modmenu_version=8.0.0-beta.2
+brrp_version=1.0.1-beta.1
+#blockus_version=4745041
+#terraform_version=7.0.1
 imblocker_version=4605195
-rei_version=12.0.652
+#rei_version=12.0.652
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
