--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.2-pre2
-supported_minecraft_versions=1.20.2-pre2,1.20.2-pre3
+minecraft_version=1.20.2-pre4
+supported_minecraft_versions=1.20.2-pre4
 loader_version=0.14.22
-yarn_mappings=1.20.2-pre2+build.5
+yarn_mappings=1.20.2-pre4+build.1
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
@@ -16,7 +16,7 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.88.3+1.20.2
+fabric_api_version=0.88.4+1.20.2
 modmenu_version=8.0.0-beta.2
 brrp_version=1.0.1-beta.1
 #blockus_version=4745041
