--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,22 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.2-pre4
-supported_minecraft_versions=1.20.2-pre4
+minecraft_version=1.20.2
+supported_minecraft_versions=1.20.2
 loader_version=0.14.22
-yarn_mappings=1.20.2-pre4+build.1
+yarn_mappings=1.20.2+build.1
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.3-beta.1
+mod_version=2.0.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.88.4+1.20.2
+fabric_api_version=0.89.1+1.20.2
 modmenu_version=8.0.0-beta.2
-brrp_version=1.0.1-beta.1
+brrp_version=1.0.1
 #blockus_version=4745041
 #terraform_version=7.0.1
 imblocker_version=4605195
