--- a/gradle.properties
+++ b/gradle.properties
@@ -5,24 +5,24 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.20.2
 supported_minecraft_versions=1.20.2
-loader_version=0.14.22
-yarn_mappings=1.20.2+build.1
+loader_version=0.14.23
+yarn_mappings=1.20.2+build.4
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.3
+mod_version=2.0.4
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.89.1+1.20.2
-modmenu_version=8.0.0-beta.2
-brrp_version=1.0.1
-#blockus_version=4745041
-#terraform_version=7.0.1
+fabric_api_version=0.90.0+1.20.2
+modmenu_version=8.0.0
+brrp_version=1.0.2
+blockus_version=4761889
+terraform_version=8.0.0
 imblocker_version=4605195
-#rei_version=12.0.652
+rei_version=13.0.666
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
