--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.2
-supported_minecraft_versions=1.20.2
+minecraft_version=1.20.4
+supported_minecraft_versions=1.20.4
 loader_version=0.15.0
-yarn_mappings=1.20.2+build.4
+yarn_mappings=1.20.4+build.1
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
@@ -16,13 +16,13 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.91.1+1.20.2
-modmenu_version=8.0.0
-brrp_version=1.0.2
-blockus_version=4913977
-terraform_version=8.0.0
+fabric_api_version=0.91.1+1.20.4
+modmenu_version=9.0.0-pre.1
+brrp_version=1.0.3-beta.2
+blockus_version=
+terraform_version=
 imblocker_version=4605195
-rei_version=13.0.678
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
