--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ project(':runtest') {
     }
     dependencies {
         implementation project(path: ':', configuration: "namedElements")
-        implementation project(path: ':with_blockus', configuration: "namedElements")
+//        implementation project(path: ':with_blockus', configuration: "namedElements")
         if (project.hasProperty('imblocker_version') && !project.imblocker_version.isEmpty()) {
             modRuntimeOnly "curse.maven:imblockerfabric-399225:$project.imblocker_version"
         }
@@ -235,7 +235,7 @@ githubRelease {
     owner = "SolidBlock-cn"
     repo = "extshape"
     tagName = "v$project.mod_version"
-    targetCommitish = "1.20.2"
+    targetCommitish = "1.20.3"
     body = changelogContent
     draft = true
     prerelease = false
