--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ minecraft_version=1.20.2
 supported_minecraft_versions=1.20.2
 loader_version=0.15.1
 yarn_mappings=1.20.2+build.4
-fabric.loom.multiProjectOptimisation = true
+fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.0.6
+mod_version=2.0.7
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
