--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.20.1
 supported_minecraft_versions=1.20,1.20.1
-loader_version=0.14.23
+loader_version=0.15.1
 yarn_mappings=1.20.1+build.10
-fabric.loom.multiProjectOptimisation = true
+fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.0.5
+mod_version=2.0.7
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.90.0+1.20.1
+fabric_api_version=0.91.0+1.20.1
 modmenu_version=7.1.0
 brrp_version=1.0.1
 blockus_version=4745041
