--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.20.4
-supported_minecraft_versions=1.20.4
-loader_version=0.15.0
+supported_minecraft_versions=1.20.3,1.20.4
+loader_version=0.15.1
 yarn_mappings=1.20.4+build.1
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.5
+mod_version=2.0.6-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
