更新至 2.0.7，适应新版本的 Blockus

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,11 +18,11 @@ archives_base_name_blockus=extshape_blockus
 # Dependencies
 fabric_api_version=0.91.2+1.20.4
 modmenu_version=9.0.0-pre.1
-brrp_version=1.0.3-beta.2
-blockus_version=
-terraform_version=
+brrp_version=1.0.3
+blockus_version=4951949
+terraform_version=9.0.0-beta.2
 imblocker_version=4605195
-rei_version=
+rei_version=14.0.687
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
