--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 import com.modrinth.minotaur.dependencies.ModDependency
 
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'maven-publish'
-    id 'io.github.juuxel.loom-vineflower' version '1.11.0'
+
+    // 用于模组发布
     id "com.modrinth.minotaur" version "2.+"
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id "com.github.breadmoirai.github-release" version "2.5.2"
 }
 
 archivesBaseName = project.archives_base_name + "-fabric"
@@ -14,7 +17,6 @@ group = project.maven_group
 allprojects {
     apply plugin: 'fabric-loom'
     apply plugin: 'maven-publish'
-    apply plugin: 'io.github.juuxel.loom-quiltflower'
     sourceCompatibility = JavaVersion.VERSION_16
     targetCompatibility = JavaVersion.VERSION_16
 
@@ -139,6 +141,18 @@ subprojects {
 project(':runtest') {
     dependencies {
         implementation project(path: ':', configuration: "namedElements")
+        implementation project(path: ':with_blockus', configuration: "namedElements")
+        if (project.hasProperty('imblocker_version') && !project.imblocker_version.isEmpty()) {
+            modRuntimeOnly "curse.maven:imblockerfabric-399225:$project.imblocker_version"
+        }
+        if (project.hasProperty('rei_version') && !project.rei_version.isEmpty()) {
+            modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:$project.rei_version"
+        }
+    }
+
+    [tasks.remapJar, tasks.remapSourcesJar, tasks.build].each {
+        it.enabled = false
+    }
     }
 
     remapJar {
@@ -155,7 +169,28 @@ modrinth {
     uploadFile = remapJar
     gameVersions = (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
-    var list = [new ModDependency('JnrDtPAE', 'required')]
-    if (platform == 'fabric') list.add new ModDependency('P7dR8mSH', 'required')
-    dependencies = list
+    var dependenciesList = [new ModDependency('JnrDtPAE', 'required')] // brrp
+    if (platform == 'fabric') dependenciesList.add new ModDependency('P7dR8mSH', 'required') // Fabric API
+    dependencies = dependenciesList
+    changelog = changelogContent
+}
+
+githubRelease {
+    def getenv = System.getenv("GITHUB_TOKEN")
+    println "GitHub 令牌: $getenv"
+    if (getenv) token = getenv
+    owner = "SolidBlock-cn"
+    repo = "extshape"
+    tagName = "v$project.mod_version"
+    targetCommitish = "1.20.1"
+    body = changelogContent
+    draft = true
+    prerelease = false
+    releaseAssets remapJar, remapSourcesJar
+    allowUploadToExisting = true
+    apiEndpoint = "https://api.github.com"
+}
+
+publish {
+    dependsOn tasks.curseforge, tasks.modrinth, tasks.githubRelease
 }
