--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.17
 supported_minecraft_versions=1.17
-loader_version=0.14.21
+loader_version=0.15.1
 yarn_mappings=1.17+build.13
-fabric.loom.multiProjectOptimisation = true
+fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
 mod_version=2.0.0
