--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.18.1
-supported_minecraft_versions=1.18,1.17.1
+supported_minecraft_versions=1.18.1
 loader_version=0.15.1
 yarn_mappings=1.18.1+build.22
-fabric.loom.multiProjectOptimisation = true
+fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
 mod_version=2.0.0
