--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ loom.platform=forge
 minecraft_version=1.19.2
 supported_minecraft_versions=1.19,1.19.1,1.19.2
 yarn_mappings=1.19.2+build.28
-forge_version=43.2.8
+forge_version=43.3.5
 
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.1-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
