--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.19.2+build.28
 forge_version=43.3.5
 
 # Mod Properties
-mod_version=2.0.1-beta.1
+mod_version=2.0.5
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
