--- a/gradle.properties
+++ b/gradle.properties
@@ -5,29 +5,29 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.20.4
 supported_minecraft_versions=1.20.3,1.20.4
-loader_version=0.15.1
+loader_version=0.15.6
 yarn_mappings=1.20.4+build.3
 fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.0.9
+mod_version=2.1.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.91.2+1.20.4
-modmenu_version=9.0.0-pre.1
+fabric_api_version=0.95.1+1.20.4
+modmenu_version=9.0.0
 brrp_version=1.0.3
-blockus_version=4954637
-terraform_version=9.0.0-beta.2
+blockus_version=5056588
+terraform_version=9.0.0
 imblocker_version=4605195
-rei_version=14.0.687
+rei_version=14.0.688
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
-loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
